--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -34,6 +34,12 @@ $def with (egg, tagwords)
 <!--<script src="assets/tagcanvas.min.js" type="text/javascript"></script>-->
 <script src="static/jquery.tagcanvas.min.js" type="text/javascript"></script>
 
+<style>
+body {
+background: url("static/dance-108915_1920.jpg") repeat;
+}
+</style>
+
 <script type="text/javascript">
 jQuery.noConflict();
 jQuery(document).ready(function($$) {
@@ -77,7 +83,7 @@ function tagappend(txt) {
 
 
 </head>
-<body role="document">
+<body role="document" id="mbody">
 
    <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -108,7 +114,7 @@ function tagappend(txt) {
       </div>
     </nav>
 
-<div class="container theme-showcase" role="main">
+<div class="container theme-showcase" role="main" id="mmain">
 
   <!-- Main jumbotron for a primary marketing message or call to action -->
   <div class="jumbotron">
