Fix bg image and added credits to app page

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -117,8 +117,8 @@ function tagappend(txt) {
 
   <!-- Main jumbotron for a primary marketing message or call to action -->
   <div class="jumbotron" style="background-color: #222222; color: #ffffff;">
-    <h2>Welcome to party-on by phaze.space!</h2>
-      <p>A leader in time saving tools for party organisation. Let us help you by generating your playlist!</p>
+    <h2>Welcome to party-on by Phaze Space!</h2>
+      <p>A leader in time saving tools for party organisation.<br/> Let us help you by generating your playlist!</p>
   </div>
 
   <div class="list-group">
@@ -137,7 +137,7 @@ function tagappend(txt) {
   </div>
 
   <div class="alert alert-success" role="alert">
-    <h2><strong>Let us help you!</strong> It will just take a couple of minutes!</h2>
+    <h3><strong>Let us help you!</strong> It will just take a couple of minutes!</h3>
   </div>
 
   <div class="panel panel-primary">
@@ -178,6 +178,7 @@ function tagappend(txt) {
     </div>
   </div>
 </div>
+<div style="color: white; font-size: -3;">Phaze Space is a Fourtex Labs production. Produced by <a href="https://twitter.com/pastcompute">@pastcompute</a>, zaxxattak, <a href="https://twitter.com/Anup_Raghavan">AnupR</a> &amp; DNS</div>
 </div>
 <!-- Query, and if less than 20 songs come up, prompt them for some more, perhaps with a few suggestions -->
 </body>
