--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -92,24 +92,25 @@ function tagappend(txt) {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Phaze Space</a>
+          <a class="navbar-brand" href="http://phaze.space">Phaze Space</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="http://phaze.space">Home</a></li>
+            <li class="active"><a href="http://phaze.space/app">PartyOn!</a></li>
             <li><a href="http://phaze.space#about">About</a></li>
             <li><a href="http://phaze.space#contact">Contact</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Charts <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Top 100</a></li>
-                <li><a href="#">ARIA Singles</a></li>
+                <li><a href="javascript:alert('Show the Top50 ARIA chart')">Top 100</a></li>
+                <li><a href="javascript:alert('Show the Top50 ARIA chart')">ARIA Singles</a></li>
               </ul>
             </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+
 
 <div style='background: #00ff00 url(static/dance-108915_1920.jpg) repeat; background-size: cover;'>
 
