--- a/www/templates/premium.html
+++ b/www/templates/premium.html
@@ -53,8 +53,8 @@ $# this ugly code copy and pasted from index.html, because building a proof of c
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="http://phaze.space/app">PartyOn!</a></li>
-            <li><a href="http://phaze.space#about">About</a></li>
-            <li><a href="http://phaze.space#contact">Contact</a></li>
+            <li><a href="http://phazespace.weebly.com/about.html">About</a></li>
+            <li><a href="http://phazespace.weebly.com/contact.html">Contact</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Charts <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
