--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -94,7 +94,10 @@ CoinWidgetCom.go({
 
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h2 class="panel-title">Here is your specially selected playlist!</h2>
+      $if egg == 'aussie':
+        <h2 class="panel-title">Here is your 100% Fair Dinkum Aussie playlist!</h2>
+      $else:
+        <h2 class="panel-title">Here is your specially selected playlist!</h2>
     </div>
     <div class="panel-body">
 
