Implement track randomisation, and placeholders for Sign In

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -153,8 +153,8 @@ function tagappend(txt) {
     <!-- show a tag cloud here as well -->
     <!-- build it from our database with some magic -->
 
-    <p>We'll search the top of the charts and build you a quick playlist for your last-minute party.<br/>When we are done you will have some cool music lined up that wont have your guests rolling their eyebrows!
-</p>
+    <p>We'll search the top of the charts and build you a quick playlist for your last-minute party.
+      <br/>When we are done you will have some cool music lined up that wont have your guests rolling their eyebrows!</p>
     <div id="demo" class="yui3-skin-sam">
       <div id="myCanvasContainer">
        <canvas width="500" height="100" id="myCanvas">
@@ -181,7 +181,7 @@ function tagappend(txt) {
     </div>
   </div>
 </div>
-<div style="color: white; font-size: -3;">Phaze Space is a Fourtex Labs production. Produced by <a href="https://twitter.com/pastcompute">@pastcompute</a>, zaxxattak, <a href="https://twitter.com/Anup_Raghavan">AnupR</a> &amp; DNS</div>
+<div style="color: white; font-size: -3;">Phaze Space is a Fourtex Labs production. Produced by <a href="https://twitter.com/pastcompute">@pastcompute</a>, Zaxattak, <a href="https://twitter.com/Anup_Raghavan">AnupR</a> &amp; DNS</div>
 </div>
 <!-- Query, and if less than 20 songs come up, prompt them for some more, perhaps with a few suggestions -->
 </body>
