--- a/www/templates/premium.html
+++ b/www/templates/premium.html
@@ -82,7 +82,11 @@ $# this ugly code copy and pasted from index.html, because building a proof of c
     <div class="panel-body">
 
     <div>Here you can tune how your play list is generated!
-      <ul><li>Find and add influencers!</li><li>Create a beat timeline for your party and let us arrange the songs to that!</li>
+      <ul>
+        <li>Just $$X per year!</li>
+        <li>NO ads!</li>
+        <li>Find and add influencers!</li>
+        <li>Create a beat timeline for your party and let us arrange the songs to that!</li>
       </ul>
 
    <!-- fixme: float over -->
@@ -95,7 +99,7 @@ $# this ugly code copy and pasted from index.html, because building a proof of c
 
 
 </div>
-<div style="color: white; font-size: -3; margin:100px;">Phaze Space is a Fourtex Labs production. Produced by <a href="https://twitter.com/pastcompute">@pastcompute</a>, zaxxattak, <a href="https://twitter.com/Anup_Raghavan">AnupR</a> &amp; DNS</div>
+<div style="color: white; font-size: -3; margin:100px;">Phaze Space is a Fourtex Labs production. Produced by <a href="https://twitter.com/pastcompute">@pastcompute</a>, Zaxattak, <a href="https://twitter.com/Anup_Raghavan">AnupR</a> &amp; DNS</div>
 </div>
 
 </div>
