Tweak metrics/monesitzation

--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -124,7 +124,7 @@ CoinWidgetCom.go({
                   <tr><td>$(xx['song'])</td><td>$xx['artist']</td><td><a href="$xx['itunes']">Get me from iTunes</a></td><td>Get me from PlayStore</td><td>Get me from Spotify</td></tr>
             </tbody>
           </table>
-<h4>For a larger playlist, please Sign up For Free With Twitter or Facebook</h4>
+<h4>For a larger playlist, or to generate up to five new lists per day, please Sign up For Free With Twitter or Facebook</h4>
       </div>
     </div>
   </div>
