Tweak metrics/monesitzation

--- a/www/templates/premium.html
+++ b/www/templates/premium.html
@@ -85,7 +85,7 @@ $# this ugly code copy and pasted from index.html, because building a proof of c
       <ul>
         <li>Just $$X per year!</li>
         <li>NO ads!</li>
-        <li>Unlimited playlists!</li>
+        <li>Unlimited playlists! (Registered non-Premium users limited to one synchronised list per day)</li>
         <li>Find and add influencers!</li>
         <li>Create a beat timeline for your party and let us arrange the songs to that!</li>
       </ul>
