Tweaks to text and layout

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -120,7 +120,8 @@ function tagappend(txt) {
   <!-- Main jumbotron for a primary marketing message or call to action -->
   <div class="jumbotron" style="background-color: #222222; color: #ffffff;">
     <h2>Welcome to party-on by Phaze Space!</h2>
-      <p>A leader in time saving tools for party organisation.<br/> Let us help you by generating your playlist!</p>
+      <p>A leader in time saving tools for party organisation. Let us help you by creating your playlist!
+<br/>Our entry in the 2015 hacksa competition</p>
   </div>
 
   <div class="list-group">
@@ -137,18 +138,16 @@ function tagappend(txt) {
       <p class="list-group-item-text">Maybe you just normally enjoy different sounds from your friends!</p>
     </a>
   </div>
-
   <div class="alert alert-success" role="alert">
     <h3><strong>Let us help you!</strong> It will just take a couple of minutes!</h3>
   </div>
 
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h3 class="panel-title">Just a quick couple of questions!</h3>
+      <h2 class="panel-title">What kind of music will your guests like?</h2>
     </div>
     <div class="panel-body">
 
-    <h3>What kind of music will your guests like?</h3>
 
     <!-- show a tag cloud here as well -->
     <!-- build it from our database with some magic -->
@@ -157,7 +156,7 @@ function tagappend(txt) {
       <br/>When we are done you will have some cool music lined up that wont have your guests rolling their eyebrows!</p>
     <div id="demo" class="yui3-skin-sam">
       <div id="myCanvasContainer">
-       <canvas width="500" height="100" id="myCanvas">
+       <canvas width="500" height="140" id="myCanvas">
         <p>Anything in here will be replaced on browsers that support the canvas element</p>
        </canvas>
       </div>
