--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -73,7 +73,8 @@ $# this ugly code copy and pasted from index.html, because building a proof of c
 
   <div class="jumbotron" style="background-color: #222222; color: #ffffff;">
     <h2>Welcome to party-on by Phaze Space!</h2>
-      <p>A leader in time saving tools for party organisation.<br/> Let us help you by generating your playlist!</p>
+      <p>A leader in time saving tools for party organisation. Let us help you by creating your playlist!
+<br/>Our entry in the 2015 hacksa competition</p>
 <script src="http://coinwidget.com/widget/coin.js"></script>
 <script>
 CoinWidgetCom.go({
@@ -94,7 +95,7 @@ CoinWidgetCom.go({
 
   <div class="panel panel-warning">
     <div class="panel panel-primary">
-    <h3>ADVERTISEMENT!</h3>
+    <h3>ADVERTISEMENT! Data from Channel V charts apis, Musicbrainz, itunes, etc</h3>
     </div>
   </div>
 
@@ -117,11 +118,12 @@ CoinWidgetCom.go({
                 <th>&nbsp;</th>
                 <th>&nbsp;</th>
                 <th>&nbsp;</th>
+                <th>&nbsp;</th>
               </tr>
             </thead>
             <tbody>
               $for xx in songs:
-                  <tr><td>$(xx['song'])</td><td>$xx['artist']</td><td><a href="$xx['itunes']">Get me from iTunes</a></td><td>Get me from PlayStore</td><td>Get me from Spotify</td></tr>
+                  <tr><td>$(xx['song'])</td><td>$xx['artist']</td><td><a href="$xx['itunes']">Get me from iTunes</a></td><td>Get me from PlayStore</td><td>Get me from Spotify</td><td>icon for V or ARIA chart link</td></tr>
             </tbody>
           </table>
 <h4>For a larger playlist, or to create multiple playlists, please Sign up For Free With Twitter or Facebook</h4>
