--- a/www/templates/premium.html
+++ b/www/templates/premium.html
@@ -72,7 +72,8 @@ $# this ugly code copy and pasted from index.html, because building a proof of c
 
   <div class="jumbotron" style="background-color: #222222; color: #ffffff;">
     <h2>Welcome to party-on by Phaze Space!</h2>
-      <p>A leader in time saving tools for party organisation.<br/> Let us help you by generating your playlist!</p>
+      <p>A leader in time saving tools for party organisation. Let us help you by creating your playlist!
+<br/>Our entry in the 2015 hacksa competition</p>
   </div>
 
   <div class="panel panel-danger">
