--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -121,16 +121,16 @@ function tagappend(txt) {
   <div class="jumbotron" style="background-color: #222222; color: #ffffff;">
     <h2>Welcome to party-on by Phaze Space!</h2>
       <p>A leader in time saving tools for party organisation. Let us help you by creating your playlist!
-<br/>Our entry in the 2015 hacksa competition</p>
+<br/>Our entry in the 2015  <a target="_blank" href="http://www.hacksa.com.au">hacksa</a> competition</p>
   </div>
 
   <div class="list-group">
     <a href="#" class="list-group-item active">
-      <h4 class="list-group-item-heading">Did you draw the short straw?</h4>
+      <h4 class="list-group-item-heading">Stressing out?</h4>
       <p class="list-group-item-text">Do you have to organise a list minute get together after work or before heading out to the club?</p>
     </a>
     <a href="#" class="list-group-item ">
-      <h4 class="list-group-item-heading">Not going home first?</h4>
+      <h4 class="list-group-item-heading">Away from home comforts?</h4>
       <p class="list-group-item-text">Maybe you have a new phone and haven't synched up yet? Maybe you're on holidays?</p>
     </a>
     <a href="#" class="list-group-item active">
@@ -180,7 +180,7 @@ function tagappend(txt) {
     </div>
   </div>
 </div>
-<div style="color: white; font-size: -3;">Phaze Space is a Fourtex Labs production. Produced by <a href="https://twitter.com/pastcompute">@pastcompute</a>, Zaxattak, <a href="https://twitter.com/Anup_Raghavan">AnupR</a> &amp; DNS</div>
+<div style="color: white; font-size: -3;">Phaze Space is a Fourtex Labs production. Web content Copyright (c) Produced by <a href="https://twitter.com/pastcompute">@pastcompute</a>, Zaxattak, <a href="https://twitter.com/Anup_Raghavan">AnupR</a> &amp; DNS<br/>API data owned by respective owners ; backend code covered by an open source license</div>
 </div>
 <!-- Query, and if less than 20 songs come up, prompt them for some more, perhaps with a few suggestions -->
 </body>
