--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -74,7 +74,7 @@ $# this ugly code copy and pasted from index.html, because building a proof of c
   <div class="jumbotron" style="background-color: #222222; color: #ffffff;">
     <h2>Welcome to party-on by Phaze Space!</h2>
       <p>A leader in time saving tools for party organisation. Let us help you by creating your playlist!
-<br/>Our entry in the 2015 hacksa competition</p>
+<br/>Our entry in the 2015  <a target="_blank" href="http://www.hacksa.com.au">hacksa</a> competition</p>
 <script src="http://coinwidget.com/widget/coin.js"></script>
 <script>
 CoinWidgetCom.go({
@@ -95,7 +95,7 @@ CoinWidgetCom.go({
 
   <div class="panel panel-warning">
     <div class="panel panel-primary">
-    <h3>ADVERTISEMENT! Data from Channel V charts apis, Musicbrainz, itunes, etc</h3>
+    <h3>ADVERTISEMENT GOES HERE! &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Data courtesy Channel V charts apis, Musicbrainz, itunes, etc</h3>
     </div>
   </div>
 
@@ -103,7 +103,7 @@ CoinWidgetCom.go({
   <div class="panel panel-primary">
     <div class="panel-heading">
       $if egg == 'aussie':
-        <h2 class="panel-title">Here is your 100% Fair Dinkum Aussie playlist!</h2>
+        <h2 class="panel-title">Here is your 100% Fair Dinkum Aussie playlist! (Well, perhaps that needs a bit more work...)</h2>
       $else:
         <h2 class="panel-title">Here is your specially selected playlist!</h2>
     </div>
@@ -147,8 +147,7 @@ CoinWidgetCom.go({
 </div>
 
 </div>
-<div style="color: white; font-size: -3; margin:100px;">Phaze Space is a Fourtex Labs production. Produced by <a href="https://twitter.com/pastcompute">@pastcompute</a>, Zaxattak, <a href="https://twitter.com/Anup_Raghavan">AnupR</a> &amp; DNS</div>
-</div>
+<div style="color: white; font-size: -3;margin:100px;">Phaze Space is a Fourtex Labs production. Web content Copyright (c) Produced by <a href="https://twitter.com/pastcompute">@pastcompute</a>, Zaxattak, <a href="https://twitter.com/Anup_Raghavan">AnupR</a> &amp; DNS<br/>API data owned by respective owners ; backend code covered by an open source license</div>
 
 </div>
 <img src="static/dance-108915_1920.jpg" id="bgg" alt="" style="position:fixed; top:0; left:0; min-width:100%; min-height:100%;z-index:100;"/>
