--- a/www/templates/premium.html
+++ b/www/templates/premium.html
@@ -73,7 +73,7 @@ $# this ugly code copy and pasted from index.html, because building a proof of c
   <div class="jumbotron" style="background-color: #222222; color: #ffffff;">
     <h2>Welcome to party-on by Phaze Space!</h2>
       <p>A leader in time saving tools for party organisation. Let us help you by creating your playlist!
-<br/>Our entry in the 2015 hacksa competition</p>
+<br/>Our entry in the 2015 <a target="_blank" href="http://www.hacksa.com.au">hacksa</a>  competition</p>
   </div>
 
   <div class="panel panel-danger">
@@ -101,7 +101,8 @@ $# this ugly code copy and pasted from index.html, because building a proof of c
 
 
 </div>
-<div style="color: white; font-size: -3; margin:100px;">Phaze Space is a Fourtex Labs production. Produced by <a href="https://twitter.com/pastcompute">@pastcompute</a>, Zaxattak, <a href="https://twitter.com/Anup_Raghavan">AnupR</a> &amp; DNS</div>
+<div style="color: white; font-size: -3; margin:100px;">Phaze Space is a Fourtex Labs production. Web content Copyright (c) Produced by <a href="https://twitter.com/pastcompute">@pastcompute</a>, Zaxattak, <a href="https://twitter.com/Anup_Raghavan">AnupR</a> &amp; DNS<br/>API data owned by respective owners ; backend code covered by an open source license</div>
+
 </div>
 
 </div>
